20-Nov-2003 by Matthias Braun
-removed lots of remaining nonused code handling with UDP networking
-convert PlayerStats to use STL
-small robustness fixes for network
-only enable the signal handling for clean shutdown, when not compiling in debug
 mode
-added sound configuration variables
-removed stopIRC argument. No need to overly complicate commands. There already
 is sendIRCMessageLine.
-some fixes for valgrind complaints
-fixed some bugs where the original netpanzer authors used memmove?!? instead of
 = to copy objects.

19-Nov-2003 by Matthias Braun
-several robustness fixes to editor tileset code
-some small UI improvements for the editor

18-Nov-2003 by Matthias Braun
-added slovakian flag by Ales <ales@chello.sk>

12-Nov-2003 by Matthias Braun
-fixed a bug where the server browser wouldn't display the correct usercount for
 servers
-added configure options, for the case where libs aren't installed in the
 default dirs

11-Nov-2003 by Matthias Braun
-fixed irclobby view to not crash on refresh button, when connection is broken
-report exceptions in the irclobby view
-fixed serveraddress view to not contain the ok and abort buttons
-make irc lobby change nickname when the player changes it's name
-put a message on screen, when palettes are calculated

07-Nov-2003 by Matthias Braun
-fixed HOM effect while joining server
-added new poland flag by Bartosz Fenski

06-Nov-2003 by Matthias Braun
-cleanups and imporvements to the IRC Lobby code
-added a callback ability to input lines, when enter is pressed
-removed chat button and make chat happen on return key
-eleminated usage of DoubleLinkList template in PowerupInterface (using
        std::vector now)

05-Nov-2003 by Matthias Braun
-added manpage contributed by Bartosz Fenski <fenio@o2.pl>

25-Oct-2003 by Matthias Braun
-removed support for .til files and converted them to .bmp
-tried to make .pak and .bmp loader endian safe

23-Oct-2003 by Ivo Danihelka
-implemented respawntype="Random" parameter
